--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container">
 
           <figure class="about-banner">
-            <img src="./assets/images/1.PNG" width="700" height="532" loading="lazy" alt="about banner"
+            <img src="./assets/images/banner.png" width="700" height="532" loading="lazy" alt="about banner"
               class="w-100 banner-animation">
           </figure>
 
